--- a/notification/kubernetes/notification-secret.yaml
+++ b/notification/kubernetes/notification-secret.yaml
@@ -3,6 +3,6 @@ kind: Secret
 metadata:
   name: notification-secret
 stringData:
-  GMAIL_ADDRESS: "19H1040031@sv.ut.edu.vn"
-  GMAIL_PASSWORD: "Phamdanghuy06102000@@"
+  GMAIL_ADDRESS: "None"
+  GMAIL_PASSWORD: "None"
 type: Opaque
